<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"
    android:fitsSystemWindows="true"
    tools:context=".Message">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/AppTheme"
        android:background="@color/backgroundcolor"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/MessageActivityToolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/app_bar_color"
            app:popupTheme="@style/AppTheme"
            app:menu="@menu/items"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/color_title"

        >
        <TextView
            android:id="@+id/From"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:gravity="center"
            />



    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:layout_width="36dp"
            android:layout_height="27dp"
            android:text="@string/to"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="@color/color_message_headers"
            android:layout_marginStart="20dp"
            android:textSize="18sp"
            />

        <AutoCompleteTextView
            android:id="@+id/To"
            android:layout_width="267dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/textcolor"
            android:inputType="textEmailAddress"
            android:completionThreshold="1"
            android:hint="@string/recipient_email"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/Subject1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/subject"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="@color/color_message_headers"
            />

        <EditText
            android:id="@+id/Subject"
            android:layout_width="267dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/textcolor"
            android:inputType="textPersonName"
            android:hint="@string/subject_hint" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:id="@+id/Object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/object"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="@color/color_message_headers"
            />

        <EditText
            android:id="@+id/Object1"
            android:layout_width="267dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:textColor="@color/textcolor"
            android:inputType="textPersonName"
            android:hint="@string/object_hint"
            />



    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_content"
            android:textAppearance="@android:style/TextAppearance"
            android:textColor="@color/color_message_headers"

            />

        <EditText
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:textColor="@color/textcolor"
            android:inputType="textMultiLine"
            android:hint="@string/message_hint"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/button_bar">
    <ImageButton
        android:background="@null"
        android:id="@+id/btn_Attachment"
        android:src="@drawable/ic_add"
        android:layout_gravity="center"
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />
    <ImageButton
        android:background="@null"
        android:id="@+id/btn_Attach_pic"
        android:src="@drawable/ic_cam"
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:layout_marginEnd="10dp"
        android:onClick="OpenDeviceCamera"
        />
        <ImageButton
            android:background="@null"
            android:id="@+id/btn_attach_pics"
            android:src="@drawable/ic_pics"
            android:layout_gravity="center"
            android:layout_height="35dp"
            android:layout_width="40dp"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
</LinearLayout>