<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation"
    >


    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653"
        tools:targetApi="o" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_face_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/GoBackIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:onClick="goback"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />


    <EditText
        android:id="@+id/Fullname"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:hint="@string/full_name"
        android:inputType="textEmailAddress"
        android:paddingStart="15sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"
        tools:targetApi="o"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:hint="@string/Email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GoBackIcon"
        app:layout_constraintVertical_bias="0.403"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:hint="@string/Password_hint"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Date"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn"
        android:elevation="5dp"
        android:textSize="18dp"
        android:ems="10"
        android:hint="@string/Birth_Day"
        android:paddingStart="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        tools:targetApi="o"
        android:onClick="showCalendar"
        android:focusable="false"
        android:clickable="true"/>

    <Button
        android:id="@+id/Signin"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:background="@drawable/joinbtn"
        android:text="@string/button_confirm"
        android:textAllCaps="false"
        android:textColor="@color/textcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date"
        app:layout_constraintVertical_bias="0.65999997" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/Signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date"
        app:layout_constraintVertical_bias="0.275">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Male"
            android:textColor="@color/black" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Female"
            android:textColor="@color/black" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gender"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/Signin"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date"
        app:layout_constraintVertical_bias="0.16" />


</androidx.constraintlayout.widget.ConstraintLayout>